Stackless-Python News
+++++++++++++++++++++

This file documents changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.


What's New in Stackless 2.7.x?
==============================

*Release date: 20XX-XX-XX*

- https://bitbucket.org/stackless-dev/stackless/issue/77
  Fix a NULL pointer exception, if a call to stackless.tasklet() fails
  (i.e. called with invalid arguments).

What's New in Stackless 2.7.9?
==============================

*Release date: 2015-02-07*

- Mac and Windows installers only: update openssl to version 1.0.1l

- https://bitbucket.org/stackless-dev/stackless/issue/60
  Fix a crash

What's New in Stackless 2.7.7 and 2.7.8
=======================================

*Release date: 2014-07-06*

- Fix for test_watchdog_on_tasklet_hard due to re !!!. The caching behaviour
  of re.py was changed in debug mode, which influenced the number of opcodes
  spent in our test.

- Fix compiler warnings found on MAC.

- https://bitbucket.org/stackless-dev/stackless/issue/61
  Fix a crash after unpickling hard switched tasklet. It is now
  always possible to inspect the local variables (frame.f_locals)
  of an unpickled frame object.

What's New in Stackless 2.7.6r3?
================================

*Release date: 2014-03-11*

- Remove various changes that are do not belong to mainline v2.7.6 Python
  and do not belong in the Stackless patch.

What's New in Stackless 2.7.6r2?
================================

*Release date: 2014-03-03*

- Fix channel and tasklet initialization.  Initialization is now done
  using __init__ methods.
  Tasklet.__new__() now just binds the tasklet to the calling thread and
  ignores extra arguments.
  The tasklet.__init__() now works like tasklet.bind.
  Channel.__new__() now ignores extra arguments.
  These changes make subclassing taskelets and channels less confusing.

- https://bitbucket.org/stackless-dev/stackless/commits/26a53cfeeeffeaacb55